Counterexample for fiber bundles locally homeomorphic but not globally.

--- a/Cohomology of real Grassmannians.tex
+++ b/Cohomology of real Grassmannians.tex
@@ -29,6 +29,7 @@
 \usepackage{tikz}
 \usetikzlibrary{cd} %commutative diagrams
 \usetikzlibrary{decorations} %curved lines
+\usetikzlibrary{decorations.fractals} %cantor
 \usetikzlibrary{positioning} %coordinates positioning
 \usetikzlibrary{3d,calc} %coordinate calculations & 3d
 \usetikzlibrary{backgrounds} %bg of tikzpicture
