--- a/bibliography/bibsample.bib
+++ b/bibliography/bibsample.bib
@@ -1,12 +1,39 @@
 @book{char_class,
-	author = "{John}, {W. Milnor} and {James}, {D. Stasheff}",
+	author = "John Milnor and James Stasheff",
 	title = "{Characteristic Classes}",
 	publisher = "{Princeton University Press}",
 	year = "1974",
 }
 
 @book{vec_bundles,
-	author = "{Hatcher Allen}",
+	author = "Allen Hatcher",
 	title = "{Vector Bundles and K-Theory}",
 	year = "2017",
+}
+
+@book{top_rotman,
+	author = "Joseph Rotman",
+	title = "{An Introduction to Algebraic Topology}",
+	publisher = "{Springer}",
+	year = "1998",
+}
+
+@article{counterexample,
+	author = "Jan Dijkstra",
+	title = "{On Homeomorphism Groups and the Compact-Open Topology}",
+	journal = "The American Mathematical Monthly",
+	volume = "112",
+	number = "10",
+	pages = "910--912",
+	year = "2005",
+}
+
+@article{top_group,
+	author = "Richard Arens",
+	title = "{Topologies for Homeomorphism Groups}",
+	journal = "American Journal of Mathematics",
+	volume = "68",
+	number = "4",
+	pages = "593--610",
+	year = "1946",
 }
